<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topContainer"
        android:layout_width="368dp"
        android:layout_height="270dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/devIDlabel"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Device ID:"
                android:textSize="14sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/devField"
                android:layout_width="291dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hintDev"
                android:inputType="text"
                android:textColorHint="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hostLabel"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Host:"
                android:textSize="14sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/hostField"
                android:layout_width="291dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hintHost"
                android:inputType="text"
                android:textColorHint="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/portLabel"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Port:"
                android:textSize="14sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/portField"
                android:layout_width="291dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hintPort"
                android:inputType="text"
                android:textColorHint="@color/colorAccent" />

        </LinearLayout>

        <TextView
            android:id="@+id/infoLabel"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_marginTop="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="217dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:gravity="top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStart"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:layout_marginRight="8dp"
                android:onClick="onClickStart"
                android:text="@string/start" />

            <Button
                android:id="@+id/btnStop"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:layout_marginLeft="8dp"
                android:onClick="onClickStop"
                android:text="@string/stop" />

        </LinearLayout>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickExit"
            android:text="@string/exit" />

    </LinearLayout>

    <!--LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickStart"
            android:text="@string/start"></Button>

        <Button
            android:id="@+id/btnStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickStop"
            android:text="@string/stop"></Button>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickExit"
            android:text="@string/exit" />
    </LinearLayout-->

</android.support.constraint.ConstraintLayout>